# mocida

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  build.bat  build.ps1  build.py  build.sh  docs.bat  release.bat  release.py  rustfmt.toml  setup.bat  setup.ps1  sync-from-windows.sh
.github/workflows/: docs.yml  release.yml
.skills/: README.md  build-test-release.md  code-doc-parity.md  conventions.md  project-map.md  rust-bindings.md
assets/: README.md  make-samples.ps1
docs/: mainpage.md
docs/html/: alignment_8c.html  alignment_8c__incl.dot  alignment_8h.html  alignment_8h.js  alignment_8h__incl.dot  annotated.html  annotated_dup.js  app_8c.js  app_8c__incl.dot  app_8c_source.html  app_8h.html  app_8h.js  app_8h__incl.dot  app_8h_source.html  children_8c.html  children_8c__incl.dot  children_8h.html  children_8h__dep__incl.dot  children_8h_source.html  classes.html  color_8c.js  color_8c_source.html  color_8h.js  color_8h_source.html  dir_000001_000000.html  dir_42b62aa6a61388bc482e1b3e898ede38.js  dir_42b62aa6a61388bc482e1b3e898ede38_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_86f77b520a613322706cda68c9ef7979_dep.dot  dir_d0381950fc41278198232cb047ffc1f9.html  dir_d0381950fc41278198232cb047ffc1f9.js  dir_d0381950fc41278198232cb047ffc1f9_dep.dot  event_8h.html  event_8h.js  files.html  font_8c.html  font_8c.js  font_8c__incl.dot  font_8c_source.html  functions.html  (+97 more)
docs/html/search/: all_10.js  all_11.js  all_12.js  all_15.js  all_16.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_1.js  enumvalues_0.js  enumvalues_2.js  enumvalues_5.js  files_0.js  files_8.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_8.js  (+15 more)
docs/theme/: header.html  mocida.css  mocida.js
installer/: build.bat
mocida/: CMakeLists.txt  Doxyfile  README.md  build.py  build.sh  clang.ini  docs.py  release.bat  release.py  setup.py  sync-from-windows.sh
mocida-rs/: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLES.md  README.md
mocida-rs/mocida/: Cargo.toml
mocida-rs/mocida-sys/: Cargo.toml  build.rs  wrapper.h
mocida-rs/mocida-sys/src/: lib.rs
mocida-rs/mocida/examples/: demo.rs  hello_world.rs  signals.rs
mocida-rs/mocida/src/: alignment.rs  anim.rs  app.rs  arena.rs  asset.rs  bind.rs  bundle.rs  button.rs  children.rs  clipboard.rs  color.rs  container.rs  controls.rs  crash.rs  cursor.rs  debug.rs  dialog.rs  error.rs  event.rs  extra.rs  file_dialog.rs  file_drop.rs  image.rs  lib.rs  mouse_area.rs  overlay.rs  popup.rs  profile.rs  reactive.rs  rect.rs  screen.rs  shadow.rs  sound.rs  stack.rs  tab.rs  text.rs  textarea.rs  textfield.rs  theme.rs  video.rs  (+5 more)
mocida/cmake/: iOSInfo.plist.in
mocida/docs/: TODO.md  mainpage.md  serve.ps1
mocida/docs/html/: _r_e_a_d_m_e_8md.html  alignment_8c.js  alignment_8c_source.html  alignment_8h__dep__incl.dot  alignment_8h_source.html  app_8c.html  app_8h__dep__incl.dot  children_8c.js  children_8c_source.html  children_8h.js  children_8h__incl.dot  color_8c.html  color_8c__incl.dot  color_8h.html  color_8h__dep__incl.dot  dir_000003_000000.html  dir_42b62aa6a61388bc482e1b3e898ede38.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_86f77b520a613322706cda68c9ef7979.html  dir_86f77b520a613322706cda68c9ef7979.js  doxygen_crawl.html  event_8h__dep__incl.dot  event_8h__incl.dot  event_8h_source.html  font_8h.html  font_8h.js  font_8h__dep__incl.dot  font_8h__incl.dot  font_8h_source.html  globals.html  globals_b.html  globals_defs.html  globals_enum.html  globals_i.html  image_8h__incl.dot  image_8h_source.html  main_8c__incl.dot  navtreedata.js  navtreeindex0.js  (+41 more)
mocida/docs/html/search/: all_1.js  all_13.js  all_14.js  all_17.js  all_4.js  all_5.js  classes_1.js  defines_1.js  enums_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  files_1.js  files_6.js  functions_0.js  functions_4.js  functions_7.js  typedefs_0.js  variables_11.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_8.js  variables_d.js
mocida/examples/: README.md  hello.c
mocida/examples/counter/: CMakeLists.txt  app.bundle  main.c
mocida/examples/hello/: CMakeLists.txt  app.bundle  main.c
mocida/fonts/: README.md
mocida/installer/: installer.c
mocida/release/: .gitignore  release.bat
mocida/src/: main.c
mocida/src/headers/uikit/: alignment.h  app.h  bind.h  bundle.h  color.h  container.h  controls.h  dialog.h  file_dialog.h  font.h  image.h  mocida_alloc.h  overlay.h  popup.h  screen.h  tab.h  text.h  textarea.h  video.h  webview.h
mocida/src/uikit/: alignment.c  anim.c  app.c  asset.c  bundle.c  button.c  children.c  clipboard.c  controls.c  dialog.c  extra.c  file_dialog.c  font.c  image.c  overlay.c  profile.c  rect.c  screen.c  stack.c  tab.c  text.c  textarea.c  textfield.c  theme.c  video.c  video_avf.mm  webview.c  webview_cocoa.mm  webview_dcomp.cpp  webview_uikit.mm  window.c
mocida/tests/: test_anchors.c  test_clipboard.c  test_dialog.c  test_drag.c  test_fps.c  test_gridview.c  test_image_radius.c  test_quality.c  test_radio.c  test_reactive.c  test_resize.c  test_sound.c  test_stack.c  test_tab.c  test_textfield.c  test_video.c  test_webview.c
release/: release.bat
src/: main.c
src/uikit/: alignment.c  app.c  arena.c  asset.c  bind.c  button.c  children.c  color.c  container.c  crash.c  cursor.c  debug.c  file_drop.c  font.c  image.c  mouse_area.c  popup.c  reactive.c  rect.c  sound.c  tab.c  text.c  textarea.c  textfield.c  video.c  walker.c  webview.c  widget.c  window.c  winmain.c
tests/: test_aa.c  test_anchors.c  test_arena.c  test_button.c  test_checkbox_anim.c  test_circles_aa.c  test_controls.c  test_doubleclick.c  test_image.c  test_mimalloc.c  test_popup.c  test_reactive.c  test_rectangles.c  test_shadows.c  test_smoke.c  test_switch.c  test_text.c  test_text_align.c  test_textarea.c  test_theme.c  test_video.c  test_webview.c
tools/: svg2ico.c
(+34 files in other folders)
